src/test/ui/issues/issue-17800.stderr
error[E0026]: variant `MyOption::MySome` does not have a field named `x`
  --> $DIR/issue-17800.rs:18:28
   |
LL |         MyOption::MySome { x: 42 } => (),
   |                            ^^^^^ variant `MyOption::MySome` does not have this field

error[E0027]: pattern does not mention field `0`
  --> $DIR/issue-17800.rs:18:9
   |
LL |         MyOption::MySome { x: 42 } => (),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ missing field `0`
   |
   = note: trying to match a tuple variant with a struct variant pattern

error: aborting due to 2 previous errors

Some errors occurred: E0026, E0027.
For more information about an error, try `rustc --explain E0026`.
